--- a/src/LeetCode/Day3/Q189/Q189.md
+++ b/src/LeetCode/Day3/Q189/Q189.md
@@ -68,7 +68,7 @@ class Solution {
 
 本质上将问题换成了数学推导问题，还要考虑如何确定整个数组循环结束的问题。
 
-![image-20240301172714332](E:\work\JavaWeb\LeetCode\src\LeetCode\Q189\方法二：环状替换.png)
+![image-20240301172714332](./方法二：环状替换.png)
 
 
 
