--- a/src/LeetCode/Day11/Q46/Q46.md
+++ b/src/LeetCode/Day11/Q46/Q46.md
@@ -37,10 +37,8 @@
 
 3. 调用 `backtrack` 函数进行递归生成排列，并将结果存储在 `res` 列表中。
 
-4. ```
-   backtrack
-   ```
-
+4. `backtrack`
+   
     函数定义了递归生成排列的具体逻辑：
 
    - 如果当前排列的长度等于给定数组的长度，说明已经生成了一个完整的排列，将当前排列加入到结果集中，并返回。
@@ -48,7 +46,7 @@
      - 如果当前元素已经在临时列表中，说明已经使用过，跳过当前元素。
      - 否则，将当前元素添加到临时列表中，然后递归调用 `backtrack` 函数生成下一个位置的元素。
      - 递归调用结束后，将最后添加的元素移出临时列表，进行回溯。
-
+   
 5. 当递归函数执行完毕后，主函数返回结果集 `res`，其中包含了给定数组的所有排列。
 
 **代码：**
