--- a/src/LeetCode/Day15/Q215/Q215.md
+++ b/src/LeetCode/Day15/Q215/Q215.md
@@ -24,35 +24,29 @@
 
  
 
-##### 第一种思路：哈希表+最小堆（自定义规则）
+##### 第一种思路：最小堆
 
 **代码**
 
 ```java
 class Solution {
-    public int[] topKFrequent(int[] nums, int k) {
-        Map<Integer, Integer> map = new HashMap<>();
+    public int findKthLargest(int[] nums, int k) {
+        PriorityQueue<Integer> minHeap = new PriorityQueue<>(k);
         for (int num : nums) {
-            map.put(num, map.getOrDefault(num, 0) + 1);
-        }
-        PriorityQueue<Map.Entry<Integer, Integer>> minHeap = new PriorityQueue<>((a, b) -> a.getValue() - b.getValue());
-        for (Map.Entry<Integer, Integer> entry : map.entrySet()) {
-            minHeap.offer(entry);
-            if (minHeap.size() > k) {
+            if (minHeap.size() < k) {
+                minHeap.offer(num);
+            } else if (minHeap.size() == k && minHeap.peek() < num) {
                 minHeap.poll();
+                minHeap.offer(num);
             }
         }
-        int[] ans = new int[k];
-        for (int i = k - 1; i >= 0; i--) {
-            ans[i] = minHeap.poll().getKey();
-        }
-        return ans;
+        return minHeap.peek();
     }
 }
 ```
 
 **通过测试：**
 
-`执行用时分布`：`12ms`			`击败90.71%使用 Java 的用户`
+`执行用时分布`：`42ms`			`击败41.29%使用 Java 的用户`
 
-`消耗内存分布`：`47.74MB`	`击败14.62%使用 Java 的用户`
+`消耗内存分布`：`55.55MB`	`击败88.99%使用 Java 的用户`
